--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style type=text/css>pre{font-size:large;}tt{font-size:large;}</style>
+<title>{{ section.title }}</title>
 </head>
 </html>
 <body>
