--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style type=text/css>pre{font-size:large;}tt{font-size:large;}</style>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>pre{font-size:large;}body{font-family: Verdana, sans-serif;}</style>
 <title>{{ section.title }}</title>
 </head>
 </html>
