--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <body>
 <table width="100%">
   <tr>
-    <td align=left bgcolor="#AAAAAA"><h1>Olla: A minimal HTML-only Zola theme</h1></td>
+    <td align=left bgcolor="#AAAAAA"><h1>{{ section.title }}</h1></td>
   </tr>
 </table>
 <table width="100%"><tr>
